software/components/service-mesh/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: internal-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
    - port:
        name: http2
        number: 80
        protocol: HTTP
      hosts:
        - "*"
      # tls:
      #   httpsRedirect: true # sends 301 redirect for http requests
    # - port:
    #     name: https
    #     number: 8443
    #     protocol: HTTPS
    #   hosts:
    #     - "*"
    #   tls:
    #     mode: SIMPLE
    #     credentialName: wild-card-tls
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: external-gateway
#   namespace: istio-system
# spec:
#   selector:
#     istio: istio-ingressgateway-external
#   servers:
#     - port:
#         name: http
#         number: 80
#         protocol: HTTP
#       hosts:
#         - "*"
    # - port:
    #     name: https
    #     number: 8443
    #     protocol: HTTPS
    #   hosts:
    #     - "*"
    #   tls:
    #     mode: SIMPLE
    #     credentialName: wild-card-tls
